--- a/index.html
+++ b/index.html
@@ -123,5 +123,42 @@
         </div>
     </div>
 
+    <!-- WORK -->
+    <div class="work">
+        <div class="container work__container">
+            <h3 class="work--title">Выполненные работы</h3>
+            <p class="work--text">Мы собрали информацию по грузам, которые мы уже доставили. У нас специальный подход к каждому виду товаров.</p>
+                <div class="work--wrapper">
+                    <div class="machines">
+                        <img src="./images/machines.png" alt="machines" width="393" height="247">
+                        <div class="machines--texts">
+                            <h3 class="machines--info">Станки и оборудование</h3>
+                            <p class="machiness--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                            <h5 class="cost"><strong>20 000 руб.</strong></h5>
+                        </div>
+                    </div>
+
+                    <div class="machines">
+                        <img src="./images/spare-parts.png" alt="machines" width="393" height="247">
+                        <div class="machines--texts">
+                            <h3 class="machines--info">Компоненты и запчасти</h3>
+                            <p class="machiness--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                            <h5 class="cost"><strong>18 000 руб.</strong></h5>
+                        </div>
+                    </div>
+
+                    <div class="machines">
+                        <img src="./images/equipment.png" alt="machines" width="393" height="247">
+                        <div class="machines--texts">
+                            <h3 class="machines--info">Станки и оборудование</h3>
+                            <p class="machiness--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                            <h5 class="cost"><strong>20 000 руб.</strong></h5>
+                        </div>
+                    </div>
+                </div>
+        </div>
+
+    </div>
+
 </body>
 </html>
