contacts section end

--- a/index.html
+++ b/index.html
@@ -470,5 +470,102 @@
         </div>
     </div>
 
+    <!-- CONTACT -->
+    <div class="contacts">
+        <div class="container contacts__container">
+            <h2 class="contacts--title">Наши контакты</h2>
+            <div class="contacts--wrapper">       
+             <div class="contacts--adress">
+                <div class="contact--phone">
+                    <div class="contact--img">
+                        <a href="#">
+                            <img src="./images/phone.svg" alt="phone" width="24" height="32">
+                        </a>
+                    </div>
+                    <div class="contact--info">
+                        <a class="contact--subtitle" href="#">Телефон</a>
+                        <br>
+                        <a class="contact--phone__number" href="#">+7 8422 99 666 5</a>
+                    </div>
+                </div>
+
+                <div class="contact--phone">
+                    <div class="contact--img">
+                        <a href="#">
+                            <img src="./images/e-mail.svg" alt="e-mail" width="28" height="18">
+                        </a>
+                    </div>
+                    <div class="contact--info">
+                        <a class="contact--subtitle" href="#">E-mail</a>
+                        <br>
+                        <a class="contact--phone__number" href="#">info@pdv.ooo</a>
+                    </div>
+                </div>
+
+                <div class="contact--phone">
+                    <div class="contact--img">
+                        <a href="#">
+                            <img src="./images/whatsapp.svg" alt="whatsapp" width="28" height="28">
+                        </a>
+                    </div>
+                    <div class="contact--info">
+                        <a class="contact--subtitle" href="#">Whatsapp</a>
+                        <br>
+                        <a class="contact--phone__number" href="#">+86 158 666 95 616</a>
+                    </div>
+                </div>
+
+                <div class="contact--phone">
+                    <div class="contact--img">
+                        <a href="#">
+                            <img src="./images/skype.svg" alt="skype" width="28" height="28">
+                        </a>
+                    </div>
+                    <div class="contact--info">
+                        <a class="contact--subtitle" href="#">Skype</a>
+                        <br>
+                        <a class="contact--phone__number" href="#">sxy-bolts.cn</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="about--contacts">
+                <div class="contacts--full__name">
+                    <a href="#" class="full--name">Полное наименование:</a>
+                    <a href="#" class="contacts--number">ООО "Поставщик Дальнего Востока"</a>
+                </div>
+
+                <div class="contacts--full__name">
+                    <a href="#" class="full--name">ИНН:</a>
+                    <a href="#" class="contacts--number">7329023100</a>
+                </div>
+
+                <div class="contacts--full__name">
+                    <a href="#" class="full--name">КПП:</a>
+                    <a href="#" class="contacts--number">732901001</a>
+                </div>
+
+                <div class="contacts--full__name">
+                    <a href="#" class="full--name">ОГРН:</a>
+                    <a href="#" class="contacts--number">1167325074762</a>
+                </div>
+
+                <div class="contacts--full__name__adress">
+                    <a href="#" class="full--name___adress">Адрес:</a>
+                    <a href="#" class="contacts--number__adress">Россия, Ульяновская обл, территория Портовой Особой  Экономической Зоны, проезд Первых Резидентов дом 3</a>
+                </div>
+            </div></div>
+        </div>
+    </div>
+
+    <!-- VIDEO -->
+    <div class="video">
+        <div class="container video__container">
+            <video controls>
+                <source src="">
+            </video>
+        </div>
+    </div>
+
 </body>
 </html>
